--- a/RootCommands-Demo/AndroidManifest.xml
+++ b/RootCommands-Demo/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:minSdkVersion="7"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
+
     <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
