Gradle plugin update

--- a/libraries/RootCommands/build.gradle
+++ b/libraries/RootCommands/build.gradle
@@ -3,22 +3,21 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.5.+'
+        classpath 'com.android.tools.build:gradle:2.2.0'
     }
 }
 
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 dependencies {
 }
 
 android {
     compileSdkVersion 17
-    buildToolsVersion "17.0.0"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         minSdkVersion 7
         targetSdkVersion 17
     }
 }
-
